# shibui-code

./: .coverage  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  package.json  shibui-code-1.0.0-Darwin.dmg
.github/: pull_request_template.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml
_CPack_Packages/Darwin/DragNDrop/: shibui-code-1.0.0-Darwin.dmg  temp.dmg
_CPack_Packages/Darwin/DragNDrop/shibui-code-1.0.0-Darwin/shibui-code.app/Contents/MacOS/: shibui-code
_CPack_Packages/Darwin/TGZ/shibui-code-1.0.0-Darwin/shibui-code.app/Contents/: Info.plist
_CPack_Packages/Darwin/TGZ/shibui-code-1.0.0-Darwin/shibui-code.app/Contents/MacOS/: shibui-code
_CPack_Packages/Darwin/TGZ/shibui-code-1.0.0-Darwin/shibui-code.app/Contents/Resources/: shibui-code.icns
app/: CMakeLists.txt
app/src/: app.cpp  clipboard.hpp  clipboard_mac.mm  window_snap_mac.mm
assets/icons/: shibui-code.icns
backend/: CMakeLists.txt
backend/include/shibui/: bridge_contract.hpp
backend/src/: bridge_contract.cpp  snapshot.cpp  window_snap.cpp
backend/tests/: CMakeLists.txt  test_bridge_contract.cpp  test_snapshot.cpp  test_window_snap.cpp
build-coverage/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  dmg-setup.applescript  shibui-unit-tests
build-coverage/Testing/Temporary/: CTestCostData.txt
build-coverage/shibui-code.app/Contents/MacOS/: shibui-code
cli/: shibui-code.js
cli/scripts/: build-native.js  detect-platform.js  postinstall.js
docs/: architecture.md  coverage.md  dev-diary.md  installation.md  packaging.md  professional-workflow.md  release-checklist.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: app.ts  fuzzy.ts  keybindings.ts  language.ts  linting.ts  main.ts  modal.ts  native.ts  placeholder.ts  session-styles.ts  style.css  tabs.ts  theme-registry.ts  types.ts
frontend/src/__tests__/: analysis-shortcuts.test.ts  app-copy-shortcut.test.ts  app-keybindings-coverage.test.ts  app-utils.test.ts  bridge-contract.test.ts  folding.test.ts  fuzzy.test.ts  keybindings.test.ts  language.test.ts  linting.test.ts  modal.test.ts  native.test.ts  placeholder.test.ts  session-styles.test.ts  tab-keybinding.test.ts  tab-navigation-shortcuts.test.ts  tab-rename.test.ts  tabbar-scroll-buttons.test.ts  tabbar-toggle.test.ts  tabs.test.ts  theme-base.test.ts  theme-registry.test.ts  toast.test.ts
frontend/src/themes/: base.ts  dracula.ts  github-light.ts  monokai.ts  solarized-dark.ts  solarized-light.ts  vscode-dark-plus.ts
frontend/tests/e2e/: app-shell.spec.ts
packaging/macos/: dmg-setup.applescript  dmg-setup.applescript.in
scripts/: build-dev.sh  coverage.sh  embed-frontend.mjs  merge_cobertura.py  package-linux.sh  package-macos.sh  package-windows.ps1  run-playwright.mjs  security.sh
src/: app.cpp  app.hpp  clipboard.hpp  clipboard_linux.cpp  clipboard_mac.mm  clipboard_win.cpp  main.cpp  snapshot.cpp  snapshot.hpp  window_snap.cpp  window_snap.hpp  window_snap_mac.hpp  window_snap_mac.mm
tests/: CMakeLists.txt  test_repository_contract.py
tests/cpp/: test_snapshot.cpp  test_window_snap.cpp
tests/integration/: test_repository_contract.py
